2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Marc André Lureau

	* flumotion/component/dvb/admin_gtk.py:
	Add the deinterlacer node in the decoder admin

2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Marc André Lureau

	* flumotion/component/dvb/admin_gtk.py:
	Add DecoderBaseAdminGtk class and make MegTS and DVB use it.
	DVB base class was only used by the DVB admin while the decoder base
	class makes more sense since both MpegTS and DVB will share effects code.

2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Marc André Lureau

	* flumotion/component/dvb/dvb.py:
	Add deinterlace effect to dvb and mpegts producer

2010-04-27  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavi Queralt

	* flumotion/component/dvb/Makefile.am:
	Remove deleted dvbchecks.py

2010-04-27  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/dvb/Makefile.am:
	And add the new wizard.glade

2010-04-27  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/dvb/Makefile.am:
	Remove deleted glade files from

2010-03-01  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Zaheer Abbas Merali

	* configure.ac:
	* env.in:
	* flumotion/Makefile.am:
	* flumotion/component/dvb/dvb.py:
	* flumotion/component/dvb/dvb.xml:
	* flumotion/component/dvb/wizard.glade:
	* flumotion/component/dvb/wizard_gtk.py:
	* flumotion/worker/checks/dvb.py:
	* flumotion/component/dvb/wizard.glade (added):
	* flumotion/worker (added):
	* flumotion/worker/checks (added):
	* flumotion/worker/checks/dvb.py (added):
	* flumotion/worker/checks/__init__.py (added):
	* flumotion/worker/checks/Makefile.am (added):
	* flumotion/worker/checks/dvb.xml (added):
	* flumotion/worker/__init__.py (added):
	* flumotion/worker/Makefile.am (added):
	* flumotion/component/dvb/dvbchecks.py (deleted):
	* flumotion/component/dvb/dvb-probe-channels.glade (deleted):